# LIB-Dekker-Float

./: .gitignore  LDF_config.h  LICENSE.txt  README.md  README.txt
Float128/: Float128.hpp  Float128_constants.hpp  Float128_quadmath_overloads.hpp
Float128x2/: Float128.hpp  Float128x2.hpp  Float128x2_constants.hpp  Float128x2_def.h  Float128x2_mpfr.h  double_Float128.hpp
Float32/: Float32.h  Float32_AVX.h
Float32x2/: Float32x2.cpp  Float32x2.hpp  Float32x2_SIMD_Const.txt  Float32x2_constants.hpp  Float32x2_def.h  Float32x2_mpfr.h  Float32x2_string.h  double_Float32.hpp
Float32x4/: Float32x4.hpp  Float32x4_SIMD_Const.txt  Float32x4_constants.hpp  Float32x4_def.h  Float32x4_mpfr.h
Float64/: Float64.h  Float64_AVX.c  Float64_AVX.h  Float64_AVX.hpp  Float64_SSE2.h  Float64_util.h  readme.txt
Float64x2/: Float64x2.cpp  Float64x2.h  Float64x2.hpp  Float64x2_AVX.c  Float64x2_AVX.h  Float64x2_LUT.hpp  Float64x2_SIMD_Const.txt  Float64x2_SSE2.h  Float64x2_constants.hpp  Float64x2_def.h  Float64x2_docs.md  Float64x2_input_limits.hpp  Float64x2_mpfr.h  Float64x2_string.h  double_Float64.hpp  double_Float64_AVX.h
Float64x3/: Float64x3.cpp  Float64x3.h  Float64x3.hpp  Float64x3_constants.hpp  Float64x3_def.h  Float64x3_mpfr.h  Float64x3_string.h
Float64x4/: Float64x4.cpp  Float64x4.h  Float64x4.hpp  Float64x4_AVX.c  Float64x4_AVX.h  Float64x4_LUT.hpp  Float64x4_SIMD_Const.txt  Float64x4_SSE2.h  Float64x4_constants.hpp  Float64x4_def.h  Float64x4_mpfr.h  Float64x4_string.h
Float64x6/: Float64x6.h  Float64x6.hpp  Float64x6_constants.hpp  Float64x6_def.h  Float64x6_mpfr.h  readme.txt
Float80/: Float80.hpp
Float80x2/: Float80.hpp  Float80x2.cpp  Float80x2.hpp  Float80x2_LUT.hpp  Float80x2_constants.hpp  Float80x2_def.h  Float80x2_mpfr.h  Float80x2_string.h  double_Float80.hpp
FloatNx2/: FloatNx2.hpp  FloatNx2_snprintf.hpp  FloatNx2_stringTo.hpp  double_FloatN_snprintf.hpp  double_FloatN_stringTo.hpp  readme.txt
FloatNxN/: FloatNxN_arithmetic.hpp  FloatNxN_constants.hpp  FloatNxN_cyl_bessel.hpp  FloatNxN_erf.hpp  FloatNxN_fortran_def.h  FloatNxN_incgamma.hpp  FloatNxN_riemann_zeta.hpp  FloatNxN_snprintf.hpp  FloatNxN_stringTo.hpp  FloatNxN_tgamma.hpp  readme.txt
LDF/: LDF_arithmetic.hpp  LDF_constants.hpp  LDF_constexpr.h  LDF_float_types.h  LDF_input_limits.hpp  LDF_restrict.h  LDF_static_assert.h  LDF_type_info.hpp
docs/: Math-Functions.md  Programming-style.md  Proposed-type-names.txt
libDDFUN/: DISCLAIMER_and_Limited-BSD_License.txt
libDQFUN/: DISCLAIMER_and_Limited-BSD_License.txt
libQD/: LBNL-BSD-License.txt
test/: CMakeLists.txt
test/src/: Float32x2_test.cpp  main.cpp
test_C99/: CMakeLists.txt
test_C99/src/: main.c
test_CXX11/: CMakeLists.txt  README.txt
test_CXX11/src/: FloatNx2_demo.hpp  FloatNx2_math_demo.hpp  MPFR_Float.hpp  boost_constants.hpp  constructor_test.cpp  digits_of_euler.h  generate_constants.hpp  generate_inverf.cpp  generate_inverf_lut.h  main.cpp  precision_test.hpp  test_function.hpp
util_mpfr/: MPFR_Float.hpp  auto_include_FloatX_mpfr.h  mpfr_convert.hpp
